fixed font sizing on minimized faq for readability

--- a/docs/browserbug/faq/faq.css
+++ b/docs/browserbug/faq/faq.css
@@ -5,8 +5,9 @@
     justify-content: center;
     align-items: center;
     
-    
 }
+
+
 
 .bubble{
     margin: 0 2vw;
@@ -55,7 +56,7 @@ ol li{
 .question{
     font-family: 'Assistant';
     font-weight: 600;
-    font-size: calc(max(1.3vw, 13px));
+    font-size: calc(max(1.3vw, 18px));
     margin-bottom: 5%;
     cursor: pointer;
 }
@@ -65,7 +66,7 @@ ol li{
 }
 
 #q0, #t0{
-    font-size: calc(max(2.5vw, 25px));
+    font-size: calc(max(2.5vw, 2rem));
     color: #8CDAD8;
     margin-bottom: 0;
 }
@@ -73,7 +74,7 @@ ol li{
 .answer{
     margin-top: -3%;
     margin-bottom: 5%;
-    font-size: calc(max(1.25vw, 12.5px));
+    font-size: calc(max(1.25vw, 16px));
     
 
 }
@@ -117,13 +118,16 @@ ol li{
 
     #content{
         flex-direction: column;
-        height: 125%;
+        height: 150%;
     }
 
 
     #left, #right{
         width: 80%;
+        margin-bottom: 5%;
     }
+
+
     
     
   }
